--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 authors = [
     { name = "Shubham Kumar", email = "kumar.shubham.off@gmail.com" }
 ]
-dependencies = []
+dependencies = [
+    "black>=23.10.1",
+]
 readme = "README.md"
 requires-python = ">= 3.12"
 
@@ -21,4 +23,4 @@ dev-dependencies = []
 allow-direct-references = true
 
 [project.scripts]
-my-hello-script = 'hello:main'
+my-hello-script = 'essentials_of_compilation.hello:main'
